--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ layout: default
   {% if paginator.total_pages > 1 %}
     {% if paginator.previous_page %}
         <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">Newer Posts</a>
+        {% if paginator.next_page %}
+          | 
+        {% endif %}
     {% endif %}
     {% if paginator.next_page %}
         <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts</a>
